--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,37 @@
    <head>
        <meta charset="utf-8" />
        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-       <title>Browserify Boilerplate</title>
+       <title>Welcome 2 Nashville</title>
        <meta name="viewport" content="width=device-width, initial-scale=1">
    </head>
    <body>
+        <h1 class = "main__Header"> Welcome to Nashville Ya'll </h1>
+        <form id = "parks__Search--Dropdown">
+        <select id = "park__Search">
+        <option value = "ada_accessible"> ADA Accessible </option>
+        <option value = "baseball_fields"> Baseball Fields </option>
+        <option value = "basketball_courts"> Basketball Courts </option>
+        <option value = "boat_launch"> Boat Launch </option>
+        <option value = "community_center"> Community Center </option>
+        <option value = "disc_golf"> Disc Golf </option>
+        <option value = "dog_park"> Dog Park </option>
+        <option value = "fishing_by_permit"> Fishing </option>
+        <option value = "football_multi_purpose_fields"> Football Fields </option>
+        <option value =  "hiking_trails"> Hiking Trails </option>
+        <option value = "horse_trails"> Horse Trails </option>
+        <option value = "lake"> Lake </option>
+        <option value = "playground"> Playground </option>
+        <option value = "restrooms_available"> Restrooms Available </option>
+        <option value = "skate_park"> Skate Park </option>
+        <option value = "soccer_fields"> Soccer Fields </option>
+        <option value = "swimming_pool"> Swimming Pool </option>
+        <option value = "tennis_courts"> Tennis Courts </option>
+        <option value = "walk_jog_paths"> Walking/Jogging Paths </options>
+        </select>
+         
+
+
+
        <article class="output">
 
        </article>
